Fix color of p (contraste)

--- a/style.css
+++ b/style.css
@@ -655,13 +655,14 @@ h3,
 h4,
 h5,
 h6,
+p,
 cite,
 label,
 .btn,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757;
 }
 
 .container {
